--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.6.1",
     "socket.io-client": "^4.5.4",
     "swr": "^2.0.0",
+    "use-reducer-async": "^2.1.1",
     "vite-plugin-svgr": "^2.4.0"
   },
   "devDependencies": {
