--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
 VITE_CLOUDINARY_NAME = dvpjtayzu
 VITE_CLOUDINARY_PRESET = Anshul
 VITE_CLOUDINARY_FOLDER = pheonix/dishes
-VITE_BACKEND_URL = https://pheonix-server-two.onrender.com
+VITE_BACKEND_URL = https://pheonix-server.onrender.com 
